--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -111,8 +111,8 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                         <div class="row">
                           <div class="text-center col-md-7 mx-auto">
                             <img class="img-fluid d-block rounded mx-auto" src="../res/images/teknothon-logo.png" width="50%" height="50%">
-                            <h1 class="text-success text-uppercase"><b>Event Registration</b></h1>
-                            <p class="lead">Register for your favourite event(s) before the seats run out. There are limited seats for every Event.&nbsp;</p>
+                            <h1 class="text-success slant text-uppercase"><br><b>Event Registration</b></h1>
+                            <p class="lead diavlo">Register for your favourite event(s) before the seats run out. There are limited seats for every Event.&nbsp;</p>
                           </div>
                         </div>
                       </div>
