--- a/events/index.html
+++ b/events/index.html
@@ -161,7 +161,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
             <div class="position-relative paddMarg">
               <div class="img-wrapper">
                     <div class="hover10 column">
-                      <a href="/eventreg/" data-toggle="modal" data-target="#myModal"><figure><img src="../res/images/events/Quiz.png" /></figure></a>
+                      <a href="#" data-toggle="modal" data-target="#myModal"><figure><img src="../res/images/events/Quiz.png" /></figure></a>
                     </div>
               </div>
             </div>
@@ -201,7 +201,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative paddMarg">
               <div class="img-wrapper hover10 column">
-                <a href="/eventreg/" data-toggle="modal" data-target="#Codemodal"><figure><img src="../res/images/events/Coding2.png" alt=""/></figure></a>
+                <a href="#" data-toggle="modal" data-target="#Codemodal"><figure><img src="../res/images/events/Coding2.png" alt=""/></figure></a>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -244,7 +244,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative paddMarg">
               <div class="img-wrapper hover10 column">
-                <a href="/eventreg/" data-toggle="modal" data-target="#LANModal"><figure><img src="../res/images/events/Lan3.svg" alt=""/></figure></a>
+                <a href="#" data-toggle="modal" data-target="#LANModal"><figure><img src="../res/images/events/Lan3.svg" alt=""/></figure></a>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -283,7 +283,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative paddMarg">
               <div class="img-wrapper hover10 column">
-                <a href="/eventreg/" data-toggle="modal" data-target="#BugModal"><figure><img src="../res/images/events/Bug4.png" alt=""/></figure></a>
+                <a href="#" data-toggle="modal" data-target="#BugModal"><figure><img src="../res/images/events/Bug4.png" alt=""/></figure></a>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -322,7 +322,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <div class="overflow-hidden width-100">
             <div class="position-relative paddMarg">
               <div class="img-wrapper hover10 column">
-                <a href="/eventreg/" data-toggle="modal" data-target="#WebsiteModal"><figure><img src="../res/images/events/Website5.png" alt=""/></figure></a>
+                <a href="#" data-toggle="modal" data-target="#WebsiteModal"><figure><img src="../res/images/events/Website5.png" alt=""/></figure></a>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -360,7 +360,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative paddMarg">
               <div class="img-wrapper hover10 column">
-                <a href="/eventreg/" data-toggle="modal" data-target="#WorkshopModal"><figure><img src="../res/images/events/workshop6.png" alt=""/></figure></a>
+                <a href="#" data-toggle="modal" data-target="#WorkshopModal"><figure><img src="../res/images/events/workshop6.png" alt=""/></figure></a>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -399,7 +399,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative paddMarg">
               <div class="img-wrapper hover10 column">
-                <a href="/eventreg/" data-toggle="modal" data-target="#DanceModal"><figure><img src="../res/images/events/dance7.png" alt=""/></figure></a>
+                <a href="#" data-toggle="modal" data-target="#DanceModal"><figure><img src="../res/images/events/dance7.png" alt=""/></figure></a>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -437,7 +437,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative paddMarg">
               <div class="img-wrapper column hover10">
-                <a href="/eventreg/" data-toggle="modal" data-target="#emberModal"><figure><img src="../res/images/events/fashion.png" alt=""/></figure></a>
+                <a href="#" data-toggle="modal" data-target="#emberModal"><figure><img src="../res/images/events/fashion.png" alt=""/></figure></a>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -475,7 +475,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative paddMarg">
               <div class="img-wrapper hover10 column">
-                <a href="/eventreg/" data-toggle="modal" data-target="#sargamModal"><figure><img src="../res/images/events/microphone.png" alt=""/></figure></a>
+                <a href="#" data-toggle="modal" data-target="#sargamModal"><figure><img src="../res/images/events/microphone.png" alt=""/></figure></a>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -514,7 +514,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative paddMarg">
               <div class="img-wrapper hover10 column">
-                <a href="/eventreg/" data-toggle="modal" data-target="#tekTionModal"><figure><img src="../res/images/events/Quiz.png" alt=""/></figure></a>
+                <a href="#" data-toggle="modal" data-target="#tekTionModal"><figure><img src="../res/images/events/Quiz.png" alt=""/></figure></a>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -552,7 +552,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative paddMarg">
               <div class="img-wrapper hover10 column">
-                <a href="/eventreg/" data-toggle="modal" data-target="#pixelsModal"><figure><img src="../res/images/events/photograph.png" alt=""/></figure></a>
+                <a href="#" data-toggle="modal" data-target="#pixelsModal"><figure><img src="../res/images/events/photograph.png" alt=""/></figure></a>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -593,7 +593,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative paddMarg">
                 <div class="img-wrapper hover10 column">
-                  <a href="/eventreg/" data-toggle="modal" data-target="#tplModal"><figure><img src="../res/images/events/cricket.png" alt=""/></figure></a>
+                  <a href="#" data-toggle="modal" data-target="#tplModal"><figure><img src="../res/images/events/cricket.png" alt=""/></figure></a>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -631,7 +631,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative paddMarg">
                 <div class="img-wrapper hover10 column">
-                  <a href="/eventreg/" data-toggle="modal" data-target="#treasureModal"><figure><img src="../res/images/events/treasure.png" alt=""/></figure></a>
+                  <a href="#" data-toggle="modal" data-target="#treasureModal"><figure><img src="../res/images/events/treasure.png" alt=""/></figure></a>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -669,7 +669,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative paddMarg">
                 <div class="img-wrapper hover10 column">
-                  <a href="/eventreg/" data-toggle="modal" data-target="#couchModal"><figure><img src="../res/images/events/Quiz.png" alt=""/></figure></a>
+                  <a href="#" data-toggle="modal" data-target="#couchModal"><figure><img src="../res/images/events/Quiz.png" alt=""/></figure></a>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -707,7 +707,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative paddMarg">
                 <div class="img-wrapper hover10 column">
-                  <a href="/eventreg/" data-toggle="modal" data-target="#faceModal"><figure><img src="../res/images/events/Quiz.png" alt=""/></figure></a>
+                  <a href="#" data-toggle="modal" data-target="#faceModal"><figure><img src="../res/images/events/Quiz.png" alt=""/></figure></a>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -745,7 +745,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <div class="overflow-hidden position-relative width-100">
             <div class="position-relative paddMarg">
                 <div class="img-wrapper hover10 column">
-                  <a href="/eventreg/" data-toggle="modal" data-target="#chessModal"><figure><img src="../res/images/events/chess.png" alt=""/></figure></a>
+                  <a href="#" data-toggle="modal" data-target="#chessModal"><figure><img src="../res/images/events/chess.png" alt=""/></figure></a>
               </div>
             </div>
             <!-- //.position-relative -->
