--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -105,14 +105,25 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
   </nav>
   <!-- //Navigation End -->
 
-<style>
-  img{
-    max-height:275px;
-  }
-  .sponsor{
-    font-family: 'Diavlo';
-  }
-</style>
+        <style>
+          img{
+            max-height:250px;
+          }
+          .sponsor{
+            font-family: 'Diavlo';
+          }          
+          /* Blur + Gray Scale */
+          .hover10 figure img {
+            -webkit-filter: grayscale(0) blur(0);
+            filter: grayscale(0) blur(0);
+            -webkit-transition: .3s ease-in-out;
+            transition: .3s ease-in-out;
+          }
+          .hover10 figure:hover img {
+            -webkit-filter: grayscale(100%) blur(3px);
+            filter: grayscale(100%) blur(3px);
+          }
+  </style>
 
   <!-- Section - Alumni Start -->
   <section id="alumni" class="bg-white">
@@ -126,38 +137,24 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
           <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
             <!-- Features Box Style v3 Start -->
-            <div class="features-box col-sm-8 col-sm-offset-2">
-              <div class="border border-gray-light border-round box-shadow-yes position-relative">
-                <div class="display-table height-100 no-padding-rl padding-7 width-100">
-                  <div class="display-table-cell no-padding-tb padding-8 text-center">
-                    <a href="http://festpav.com/"><img src="../res/images/sponsors/festPav.png" alt="FestPav"></a>
-                  </div>
-                  <!-- //.display-table-cell -->
+            <div>
+              <div>
+                <div class="hover10 column">
+                  <a href="https://festpav.com"><figure><img src="../res/images/sponsors/festpav.png" class="center-block"/></figure></a>
                 </div>
-                <!-- //.display-table -->
               </div>
-              <!-- //.border -->
             </div>
-            <!-- //Features Box Style v3 End -->
-          </div>
-          <br>
           <h3 class="sponsor">Zebronics</h3>
           <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
           <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
-            <!-- Features Box Style v3 Start -->
-            <div class="features-box col-sm-8 col-sm-offset-2">
-              <div class="border border-gray-light border-round box-shadow-yes position-relative">
-                <div class="display-table height-100 no-padding-rl padding-7 width-100">
-                  <div class="display-table-cell no-padding-tb padding-8 text-center">
-                    <a href="https://www.zebronics.com"><img src="../res/images/sponsors/zebronics.jpg" alt="Zebronics">
-                    </a>
+              <!-- Features Box Style v3 Start -->
+            <div>
+                <div>
+                  <div class="hover10 column">
+                    <a href="https://zebronics.com"><figure><img src="../res/images/sponsors/zebronics.jpg" class="center-block"/></figure></a>
                   </div>
-                  <!-- //.display-table-cell -->
                 </div>
-                <!-- //.display-table -->
               </div>
-              <!-- //.border -->
-            </div>
             <!-- //Features Box Style v3 End -->
           </div>
           <br>
@@ -165,16 +162,12 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
           <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
             <!-- Features Box Style v3 Start -->
-            <div class="features-box col-sm-8 col-sm-offset-2">
-              <div class="border border-gray-light border-round box-shadow-yes position-relative">
-                <div class="display-table height-100 no-padding-rl padding-7 width-100">
-                  <div class="display-table-cell no-padding-tb padding-8 text-center">
-                    <a href="https://www.facebook.com/theeducationtree/"><img src="../res/images/sponsors/tet.jpg" alt="The Education Tree">
+            <div>
+                <div>
+                  <div class="hover10 column">
+                    <a href="https://www.facebook.com/theeducationtree/"><figure><img src="../res/images/sponsors/tet.jpg" class="center-block" alt="The Education Tree"/></figure>
                     </a>
                   </div>
-                  <!-- //.display-table-cell -->
-                </div>
-                <!-- //.display-table -->
               </div>
               <!-- //.border -->
             </div>
@@ -186,11 +179,11 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
           <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
             <!-- Features Box Style v3 Start -->
-            <div class="features-box col-sm-8 col-sm-offset-2">
-              <div class="border border-gray-light border-round box-shadow-yes position-relative">
-                <div class="display-table height-100 no-padding-rl padding-7 width-100">
-                  <div class="display-table-cell no-padding-tb padding-8 text-center">
-                    <a href="https://thevioletjourno.wordpress.com"><img src="../res/images/sponsors/tvj.jpeg" alt="The Violet Journal">
+            <div>
+              <div>
+                <div>
+                  <div class="hover10 column">
+                    <a href="https://thevioletjourno.wordpress.com"><figure><img src="../res/images/sponsors/tvj.jpeg" class="center-block" alt="The Violet Journal"/></figure>
                     </a>
                   </div>
                   <!-- //.display-table-cell -->
@@ -207,11 +200,11 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
           <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
             <!-- Features Box Style v3 Start -->
-            <div class="features-box col-sm-8 col-sm-offset-2">
-              <div class="border border-gray-light border-round box-shadow-yes position-relative">
-                <div class="display-table height-100 no-padding-rl padding-7 width-100">
-                  <div class="display-table-cell no-padding-tb padding-8 text-center">
-                    <a href="http://www.adcrew.co/"><img src="../res/images/sponsors/adcrew.png" alt="The AD Crew">
+            <div>
+              <div>
+                <div>
+                  <div class="hover10 column">
+                    <a href="http://www.facebook.com/theadcrew"><figure><img src="../res/images/sponsors/adcrew.png" class="center-block" alt="The AD Crew"/></figure>
                     </a>
                   </div>
                   <!-- //.display-table-cell -->
