--- a/events/index.html
+++ b/events/index.html
@@ -128,6 +128,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <h3 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-sideline-base-color">
             Events :
           </h3>
+          <a href="#events_table"><h4>Check Event Schedule</h4></a>
           <p class="margin-5 diavlo no-margin-rl text-gray-dark-2">
             Following are the Events that will be Organized at Teknothon 2018.
           </p>
@@ -795,10 +796,10 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
     <!-- //.container -->
   </section>
   <!-- //Section - Team End -->
-  <section class="bg-white">
-    <div class="container" id="event_table">
+  <h1><center class="diavlo">Event Schedule for Teknothon 2018</center></h1>
+  <section class="bg-white">      
+    <div class="container" id="events_table">
       <table class="table diavlo table-bordered table-hover">
-        <caption><h3><center>Event Schedule for Teknothon 2018</center></h3></caption>
         <th>S.No.</th><th>Event Name</th><th>CoOrdinator</th><th>Volunteer</th><th>Start Time</th><th>End Time</th><th>Reg. Fee</th><th>Venue</th><th>1st Prize</th><th>2nd Prize</th>
         <tr>
           <td>1</td><td>Quizzical (IT Quiz)</td><td>Shara, Nitin, Akashdeep, Abdul</td><td>Farheen, Anam, Swati</td><td>10:30 (1st Round)<br>12:30 (2nd Round)</td><td> --- </td><td>100&#8377 (50&#8377/person in a group of 2)</td><td>LAB - 1</td><td>2000&#8377 + Zebronics Goodie/Coupons</td><td>1000&#8377 + Zebronics Goodie/Coupons</td>
