Jagriti to Jagrati

--- a/events/index.html
+++ b/events/index.html
@@ -810,7 +810,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <td>2</td><td>Game Of Coding</td><td>11:30 AM</td><td> --- </td><td>50 &#8377</td><td>LAB - 2</td><td>2000&#8377 + Zebronics Goodie/Coupons</td><td>1000&#8377 + Zebronics Goodie/Coupons</td><td>Shan, Hardik, Sumbul</td><td>Sahil, Tauseef</td>
         </tr>
         <tr>
-          <td>3</td><td>BugVilla</td><td>12:30 PM</td><td> --- </td><td>100 &#8377</td><td>LAB - 1</td><td>2000&#8377 + Zebronics Goodie/Coupons</td><td>1000&#8377 + Zebronics Goodie/Coupons</td><td>Sandeep, Borno, Nargis Anjum</td><td>Shahida, Charu, Jagriti</td>
+          <td>3</td><td>BugVilla</td><td>12:30 PM</td><td> --- </td><td>100 &#8377</td><td>LAB - 1</td><td>2000&#8377 + Zebronics Goodie/Coupons</td><td>1000&#8377 + Zebronics Goodie/Coupons</td><td>Sandeep, Borno, Nargis Anjum</td><td>Shahida, Charu, Jagrati</td>
         </tr>
         <tr>
           <td>4</td><td>Website Design</td><td>02:00 PM</td><td>03:30 PM</td><td>100 &#8377</td><td>LAB - 2</td><td>2000&#8377 + Coupons</td><td>1000&#8377 + Coupons</td><td>Touseef, Arib, Sajid</td><td>Sahil, Swati</td>
@@ -840,7 +840,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <td>12</td><td>Dance SOLO</td><td>02:00 PM</td><td>04:00 PM</td><td>100 &#8377</td><td>M. A. Ansari Auditorium</td><td>5000&#8377 + Coupons</td><td>2000&#8377 + Coupons</td><td>Sakshi, Junaid, Sumbul, Laraiv, Tiwana, Nitin, Affan</td><td>Tauseef, Kritika, Kamal, Jitender, Danish, Farheen, Shameem</td>
         </tr>
         <tr>
-          <td>13</td><td>Dance GROUP</td><td>04:00 PM</td><td>05:00 PM</td><td>500 &#8377 each Group</td><td>M. A. Ansari Auditorium</td><td>10,000&#8377 + Coupons</td><td>5,000&#8377 + Coupons</td><td>Sakshi, Junaid, Sumbul, Laraiv, Tiwana, Nitin</td><td>Shahida, Jagriti, Charu, Pavan, Basit, Shabib, Ishan, Taqi, Tauheed</td>
+          <td>13</td><td>Dance GROUP</td><td>04:00 PM</td><td>05:00 PM</td><td>500 &#8377 each Group</td><td>M. A. Ansari Auditorium</td><td>10,000&#8377 + Coupons</td><td>5,000&#8377 + Coupons</td><td>Sakshi, Junaid, Sumbul, Laraiv, Tiwana, Nitin</td><td>Shahida, Jagrati, Charu, Pavan, Basit, Shabib, Ishan, Taqi, Tauheed</td>
         </tr>
         <tr>
           <td>14</td><td>Couch Potato</td><td>12:00 PM</td><td>02:00 PM</td><td>50&#8377/person in Group</td><td>Seminar Room</td><td>2000&#8377 + Coupons</td><td>1000&#8377 + Coupons</td><td>Nouman, Ahsan, Zikran, Uvais</td><td>Imran, Ishan, Tauseef, Navneesh, Taqi</td>
