--- a/events/index.html
+++ b/events/index.html
@@ -401,6 +401,8 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                 <!-- //.overflow-hidden -->
               </div>
               <!-- //Member Box End -->
+       </div>
+       <div class="row">       
               <!-- Member Box Start DANCE-->
               <div class="member-box col-xs-6 col-sm-4 col-md-3">
                 <div class="overflow-hidden position-relative width-100">
@@ -557,6 +559,8 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                 <!-- //.overflow-hidden -->
               </div>
               <!-- //Member Box End -->
+        </div>
+        <div class="row">      
               <!-- Member Box Start PIXELS-->
               <div class="member-box col-xs-6 col-sm-4 col-md-3">
                 <div class="overflow-hidden position-relative width-100">
