--- a/events/index.html
+++ b/events/index.html
@@ -401,8 +401,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                 <!-- //.overflow-hidden -->
               </div>
               <!-- //Member Box End -->
-       </div>
-       <div class="row">       
+      
               <!-- Member Box Start DANCE-->
               <div class="member-box col-xs-6 col-sm-4 col-md-3">
                 <div class="overflow-hidden position-relative width-100">
@@ -559,8 +558,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                 <!-- //.overflow-hidden -->
               </div>
               <!-- //Member Box End -->
-        </div>
-        <div class="row">      
+          
               <!-- Member Box Start PIXELS-->
               <div class="member-box col-xs-6 col-sm-4 col-md-3">
                 <div class="overflow-hidden position-relative width-100">
@@ -804,6 +802,62 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
   <!-- //Section - Team End -->
   <h1><center class="diavlo">Event Schedule for Teknothon 2018</center></h1>
   <section class="bg-white">      
+    <!-- <div class="container overflow-x:auto" id="events_table">
+      <table class="table diavlo table-bordered table-hover">
+        <th>S.No.</th><th>Event Name</th><th>Start Time</th><th>End Time</th><th>Reg. Fee</th><th>Venue</th><th>1st Prize</th><th>2nd Prize</th><th>CoOrdinator</th><th>Volunteer</th>
+        <tr>
+          <td>1</td><td>Quizzical (IT Quiz)</td><td>10:30 (1st Round)<br>12:30 (2nd Round)</td><td> --- </td><td>100&#8377 (50&#8377/person in a group of 2)</td><td>LAB - 1</td><td>2000&#8377 + Zebronics Goodie/Coupons</td><td>1000&#8377 + Zebronics Goodie/Coupons</td><td>Shara, Nitin, Akashdeep, Abdul</td><td>Farheen, Anam, Swati</td>
+        </tr>
+        <tr>
+          <td>2</td><td>Game Of Coding</td><td>11:30 AM</td><td> --- </td><td>50 &#8377</td><td>LAB - 2</td><td>2000&#8377 + Zebronics Goodie/Coupons</td><td>1000&#8377 + Zebronics Goodie/Coupons</td><td>Shan, Hardik, Sumbul</td><td>Sahil, Tauseef</td>
+        </tr>
+        <tr>
+          <td>3</td><td>BugVilla</td><td>12:30 PM</td><td> --- </td><td>100 &#8377</td><td>LAB - 1</td><td>2000&#8377 + Zebronics Goodie/Coupons</td><td>1000&#8377 + Zebronics Goodie/Coupons</td><td>Sandeep, Borno, Nargis Anjum</td><td>Shahida, Charu, Jagrati</td>
+        </tr>
+        <tr>
+          <td>4</td><td>Website Design</td><td>02:00 PM</td><td>03:30 PM</td><td>100 &#8377</td><td>LAB - 2</td><td>2000&#8377 + Coupons</td><td>1000&#8377 + Coupons</td><td>Touseef, Arib, Sajid</td><td>Sahil, Swati</td>
+        </tr>
+        <tr>
+          <td>5</td><td>ChessMate</td><td>12:00 PM</td><td> --- </td><td>50 &#8377</td><td>SB - 02</td><td>1000&#8377 + Coupons</td><td>500&#8377 + Coupons</td><td>Nargis Tarannum, Akash Jaiswal, Zaid, Satyam</td><td>Navneesh, Tauseef</td>
+        </tr>
+        <tr>
+          <td>6</td><td>Cricket</td><td>11:30 PM</td><td> --- </td><td>500 &#8377 each group</td><td>Ground</td><td>5000&#8377 + Coupons</td><td>2000&#8377 + Coupons</td><td>Rehan, Naushad, Abdul, Asif Jeelani, Affan</td><td>Qambar, Shameem, Abhishek, Danish, Navneesh</td>
+        </tr>
+        <tr>
+          <td>7</td><td>Treasure Hunt</td><td>11:00 AM</td><td> --- </td><td>200&#8377 (50&#8377/person in a team of 4)</td><td>Campus</td><td>2000&#8377 + Coupons</td><td>1000&#8377 + Coupons</td><td>Nouman, Uvais, Nargis Anjum, Nargis Tarannum</td><td>Utkarsh, Imran, Ishan, Basit, Sumaya, Kritika, Ikram, Jitender Singh, Ehtisham, Pavan</td>
+        </tr>
+        <tr>
+          <td>8</td><td>LAN Gaming</td><td>01:00 PM</td><td> --- </td><td>50 &#8377</td><td>SB - 01</td><td>2000&#8377 + Coupons</td><td>1000&#8377 + Coupons</td><td>Laraiv, Arham</td><td>Imran, Qambar, Faiz, Utkarsh, Mahmoud, Amrit</td>
+        </tr>
+        <tr>
+          <td>9</td><td>Face Painting</td><td>05:00 PM</td><td>06:00 PM</td><td>50 &#8377</td><td>Ground</td><td>2000&#8377 + Coupons</td><td>1000&#8377 + Coupons</td><td>Nabeela, Tanzeel, Sakshi</td><td>Anam, Sumaya</td>
+        </tr>
+        <tr>
+          <td>10</td><td>Singing</td><td>10:30 AM</td><td>12:30 PM</td><td>50 &#8377</td><td>M. A. Ansari Auditorium</td><td>3000&#8377 + Coupons</td><td>1500&#8377 + Coupons</td><td>Sumbul, Arib, Asif, Jatin</td><td>Anam, Swati, Usama</td>
+        </tr>
+        <tr>
+          <td>11</td><td>Ember - Fashion Show</td><td>01:30 PM</td><td>02:00 PM</td><td>200 &#8377</td><td>M. A. Ansari Auditorium</td><td>5000&#8377 + Coupons</td><td>2000&#8377 + Coupons</td><td>Sakshi, Rupakshi, Jatin, Akash Rastogi</td><td>Imran, Kaynat, Sunakshi, Usama</td>
+        </tr>
+        <tr>
+          <td>12</td><td>Dance SOLO</td><td>02:00 PM</td><td>04:00 PM</td><td>100 &#8377</td><td>M. A. Ansari Auditorium</td><td>5000&#8377 + Coupons</td><td>2000&#8377 + Coupons</td><td>Sakshi, Junaid, Sumbul, Laraiv, Tiwana, Nitin, Affan</td><td>Tauseef, Kritika, Kamal, Jitender, Danish, Farheen, Shameem</td>
+        </tr>
+        <tr>
+          <td>13</td><td>Dance GROUP</td><td>04:00 PM</td><td>05:00 PM</td><td>500 &#8377 each Group</td><td>M. A. Ansari Auditorium</td><td>10,000&#8377 + Coupons</td><td>5,000&#8377 + Coupons</td><td>Sakshi, Junaid, Sumbul, Laraiv, Tiwana, Nitin</td><td>Shahida, Jagrati, Charu, Pavan, Basit, Shabib, Ishan, Taqi, Tauheed</td>
+        </tr>
+        <tr>
+          <td>14</td><td>Couch Potato</td><td>12:00 PM</td><td>02:00 PM</td><td>50&#8377/person in Group</td><td>Seminar Room</td><td>2000&#8377 + Coupons</td><td>1000&#8377 + Coupons</td><td>Nouman, Ahsan, Zikran, Uvais</td><td>Imran, Ishan, Tauseef, Navneesh, Taqi</td>
+        </tr>
+        <tr>
+          <td>15</td><td>Photography</td><td> --- </td><td> --- </td><td> --- </td><td>50 &#8377</td><td>Online</td><td>2000&#8377 + Coupons</td><td>1000&#8377 + Coupons</td><td>Tanzeel, Nabeela</td>
+        </tr>     
+        <tr>
+          <td>16</td><td>Hands-On Workshop (Day 1)<br>Linux, IRC</td><td>01:30 PM</td><td>04:00 PM</td><td>50 &#8377</td><td>SB - 02</td><td> --- </td><td> --- </td><td>Shara, Akashdeep Tiwanee, Waseem, Nargis Tarannum, Satyam, Sakshi, Tanzeel, Sahil</td><td> --- </td>
+        </tr>
+        <tr>
+          <td>17</td><td>Hands-On Workshop (Day 2)<br>GIT, GitHub</td><td>01:30 PM</td><td>04:00 PM</td><td>100 &#8377</td><td>SB - 02</td><td> --- </td><td> --- </td><td>Shara, Akashdeep Tiwanee, Waseem, Nargis Tarannum, Satyam, Sakshi, Tanzeel, Sahil</td><td> --- </td>
+        </tr>
+      </table>
+    </div> -->
     <div class="container overflow-x:auto" id="events_table">
       <table class="table diavlo table-bordered table-hover">
         <th>S.No.</th><th>Event Name</th><th>Start Time</th><th>End Time</th><th>Reg. Fee</th><th>Venue</th><th>1st Prize</th><th>2nd Prize</th><th>CoOrdinator</th><th>Volunteer</th>
@@ -859,9 +913,6 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <td>17</td><td>Hands-On Workshop (Day 2)<br>GIT, GitHub</td><td>01:30 PM</td><td>04:00 PM</td><td>100 &#8377</td><td>SB - 02</td><td> --- </td><td> --- </td><td>Shara, Akashdeep Tiwanee, Waseem, Nargis Tarannum, Satyam, Sakshi, Tanzeel, Sahil</td><td> --- </td>
         </tr>
       </table>
-
-
-
     </div>
 
   </section>
