--- a/contact/index.html
+++ b/contact/index.html
@@ -128,7 +128,15 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
             <i class="fa fa-envelope-o display-block text-base-color title-extra-large-2"></i>
             <br>
             <h4 class="font-weight-300 letter-spacing-1">
-              teknothon.dcs@gmail.com<br><br>tanzeelkhan94@gmail.com
+              <i class="fa fa-at"></i> teknothon.dcs@gmail.com<br>
+            </h4>
+          </div>
+          <div class="row text-center"><br>
+            
+            <h4 class="font-weight-300 diavlo letter-spacing-1">
+              <p>Tanzeel  :  </p><i class="fa fa-mobile"></i> 9650389803<br>
+            </h4> <br><h4 class="font-weight-300 diavlo letter-spacing-1">
+              <p>Nabeela  :  </p><i class="fa fa-mobile"></i> 9650386980<br>
             </h4>
           </div>
           <!-- //.row -->
@@ -187,8 +195,8 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
               Our Location
             </span> -->
             <br>
-            <h4 class="font-weight-300 letter-spacing-1">
-              Jamia Millia Islamia
+            <h4 class="font-weight-300 diavlo letter-spacing-1">
+              <i class="fa fa-automobile"></i><br><br> Jamia Millia Islamia
               <br>Department of Computer Science
               <br>Jamia Nagar
               <br>New Delhi 110025
