--- a/events/index.html
+++ b/events/index.html
@@ -801,8 +801,8 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
   </section>
   <!-- //Section - Team End -->
   <h1><center class="diavlo">Event Schedule for Teknothon 2018</center></h1>
-  <section class="bg-white">      
-    <!-- <div class="container overflow-x:auto" id="events_table">
+  <section class="bg-white" id="events_table">      
+    <div class="container overflow-x:auto" style="display:none" id="events_table2">
       <table class="table diavlo table-bordered table-hover">
         <th>S.No.</th><th>Event Name</th><th>Start Time</th><th>End Time</th><th>Reg. Fee</th><th>Venue</th><th>1st Prize</th><th>2nd Prize</th><th>CoOrdinator</th><th>Volunteer</th>
         <tr>
@@ -857,8 +857,8 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <td>17</td><td>Hands-On Workshop (Day 2)<br>GIT, GitHub</td><td>01:30 PM</td><td>04:00 PM</td><td>100 &#8377</td><td>SB - 02</td><td> --- </td><td> --- </td><td>Shara, Akashdeep Tiwanee, Waseem, Nargis Tarannum, Satyam, Sakshi, Tanzeel, Sahil</td><td> --- </td>
         </tr>
       </table>
-    </div> -->
-    <div class="container overflow-x:auto" id="events_table">
+    </div>
+    <div class="container overflow-x:auto" id="events_table1">
       <table class="table diavlo table-bordered table-hover">
         <th>S.No.</th><th>Event Name</th><th>Start Time</th><th>Reg. Fee</th><th>Venue</th>
         <tr>
@@ -904,7 +904,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
           <td>14</td><td>Couch Potato</td><td>12:00 PM</td><td>50&#8377/person in Group</td><td>Seminar Room</td>
         </tr>
         <tr>
-          <td>15</td><td>Photography</td><td> --- </td><td> --- </td><td>50 &#8377</td><td>Online</td>
+          <td>15</td><td>Photography</td><td> --- </td><td>50 &#8377</td><td>Online</td>
         </tr>     
         <tr>
           <td>16</td><td>Hands-On Workshop (Day 1)<br>Linux, IRC</td><td>01:30 PM</td><td>50 &#8377</td><td>SB - 02</td>
@@ -914,6 +914,8 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
         </tr>
       </table>
     </div>
+    <div class="col-md-8 col-md-offset-2 text-center">
+    <button id="toggleTable" class="btn btn-outline-base-color sm-btn-medium btn-small col-md-4 no-margin-rl">Toggle Table</button></div>
   </section>
 
 
@@ -1063,6 +1065,29 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
   <!-- Countdown -->
   <script src="../res/js/jquery.countdown.min.js"></script>
   <script src="../res/js/countdown.js"></script>
+
+  <script type="text/javascript">
+
+    $(document).ready(function(){
+      var table =1;
+        $('#toggleTable').click(function(){
+            
+            if(table==1)
+            {
+              $('#events_table1').hide();
+              $('#events_table2').show();
+              table=2;
+              $('#events_table2').focus();
+            }
+            else {
+              $('#events_table1').show();
+              $('#events_table2').hide();
+              $('#events_table1').focus();
+              table=1;
+            }
+        })  
+  });
+  </script>
 
 </body>
 
