--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -196,7 +196,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                                                             <br><label class="center-block">LAN GAMING</label>
                                                             <label class="lbl" for="cs"><input type="checkbox" class="event_checks"         value="50" id="cs" name="Counter Strike"/>Counter Strike (PC) (&#8377 50) : </label><br>
                                                             <label class="lbl" for="NFS"><input type="checkbox" class="event_checks"        value="50" id="NFS" name="NFS"/>Need For Speed (PC) (&#8377 50) : </label><br>
-                                                            <label class="lbl" for="FIFA"><input type="checkbox" class="event_checks"       value="50" id="FIFA" name="FIFA"/>FIFA (PC) (&#8377 50) : </label><br>
+                                                            <label class="lbl" for="TEKKEN"><input type="checkbox" class="event_checks"       value="50" id="TEKKEN" name="TEKKEN"/>TEKKEN (&#8377 50) : </label><br>
                                                             <label class="lbl" for="MMil"><input type="checkbox" class="event_checks"       value=50 id="MMil" name="Mini Militia"/>Mini MILITIA (MOBILE) (&#8377 50) : </label><br><br>          
                                                     </div>
                                                     <div class="modal-footer">
