--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -216,7 +216,87 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
             <!-- //Features Box Style v3 End -->
           </div>
           <br>
-          <!-- //Features Box Style v3 End -->
+          <h3 class="sponsor">Aapka Times</h3>
+          <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
+          <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
+            <!-- Features Box Style v3 Start -->
+            <div>
+                <div>
+                  <div class="hover10 column">
+                    <a href="https://aapkatimes.com"><figure><img src="../res/images/sponsors/AT.png" class="center-block" alt="Aapka Times"/></figure>
+                    </a>
+                  </div>
+              </div>
+              <!-- //.border -->
+            </div>
+            <!-- //Features Box Style v3 End -->
+          </div>
+          <br>
+          <h3 class="sponsor">Mapples</h3>
+          <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
+          <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
+            <!-- Features Box Style v3 Start -->
+            <div>
+                <div>
+                  <div class="hover10 column">
+                    <a href="https://mapples.in"><figure><img src="../res/images/sponsors/mapples.jpg" class="center-block" style="max-width:75%" alt="Mapples"/></figure>
+                    </a>
+                  </div>
+              </div>
+              <!-- //.border -->
+            </div>
+            <!-- //Features Box Style v3 End -->
+          </div>
+          <br>
+          <h3 class="sponsor">DU Express</h3>
+          <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
+          <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
+            <!-- Features Box Style v3 Start -->
+            <div>
+                <div>
+                  <div class="hover10 column">
+                    <a href="https://duexpress.in"><figure><img src="../res/images/sponsors/DUExp.png" class="center-block" style="width:70%" alt="DU Express"/></figure>
+                    </a>
+                  </div>
+              </div>
+              <!-- //.border -->
+            </div>
+            <!-- //Features Box Style v3 End -->
+          </div>
+          <br>
+
+          <h3 class="sponsor">3 Pipers</h3>
+          <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
+          <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
+            <!-- Features Box Style v3 Start -->
+            <div>
+                <div>
+                  <div class="hover10 column">
+                    <a href="https://www.facebook.com/3pipers"><figure><img src="../res/images/sponsors/3pipers.jpg" class="center-block" alt="3 Pipers"/></figure>
+                    </a>
+                  </div>
+              </div>
+              <!-- //.border -->
+            </div>
+            <!-- //Features Box Style v3 End -->
+          </div>
+          <br>
+          <h3 class="sponsor">Qasai App</h3>
+          <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
+          <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
+            <!-- Features Box Style v3 Start -->
+            <div>
+                <div>
+                  <div class="hover10 column">
+                    <a href="https://Qasai.in"><figure><img src="../res/images/sponsors/qasai.png" class="center-block" alt="Qasai App"/></figure>
+                    </a>
+                  </div>
+              </div>
+              <!-- //.border -->
+            </div>
+            <!-- //Features Box Style v3 End -->
+          </div>
+          <br>
           </div>
           <!-- //.row -->
 
