Toggle button off

--- a/events/index.html
+++ b/events/index.html
@@ -914,7 +914,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
       </table>
     </div>
     <div class="col-md-8 col-md-offset-2 text-center">
-    <button id="toggleTable" class="btn btn-outline-base-color sm-btn-medium btn-small col-md-4 no-margin-rl">Toggle Table</button></div>
+   </div>
   </section>
 
 
