--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -264,7 +264,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                                             </div>
                                             <div class="modal-footer">
                                                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                                                    <button type="submit" class="btn btn-primary submitBtn" onclick="javascript:sendData();">Sure</button>
+                                                    <button type="submit" class="btn btn-primary submitBtn" id="cashSubmit" onclick="javascript:sendData();">Sure</button>
                                                     <!-- <input type="submit" value="Proceed" class="button-success btn btn-default">
                                                     <button type="submit" id="cashSubmit" class="button-success btn btn-default" onclick="javascript:sendData();" data-dismiss="modal">Close !</button> -->
                                             </div>
