--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -297,6 +297,118 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
             <!-- //Features Box Style v3 End -->
           </div>
           <br>
+          <h3 class="sponsor">XL Technologies</h3>
+          <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
+          <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
+            <!-- Features Box Style v3 Start -->
+            <div>
+                <div>
+                  <div class="hover10 column">
+                    <a href="#"><figure><img src="../res/images/sponsors/XLT.png" class="center-block" alt="XL Technologies"/></figure>
+                    </a>
+                  </div>
+              </div>
+              <!-- //.border -->
+            </div>
+            <!-- //Features Box Style v3 End -->
+          </div>
+          <br>
+          <h3 class="sponsor">Delhi College of Photography</h3>
+          <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
+          <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
+            <!-- Features Box Style v3 Start -->
+            <div>
+                <div>
+                  <div class="hover10 column">
+                    <a href="http://www.dcop.in"><figure><img src="../res/images/sponsors/DCOP.jpg" class="center-block" alt="Delhi College of Photography"/></figure>
+                    </a>
+                  </div>
+              </div>
+              <!-- //.border -->
+            </div>
+            <!-- //Features Box Style v3 End -->
+          </div>
+          <br>
+          <h3 class="sponsor">APTRON</h3>
+          <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
+          <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
+            <!-- Features Box Style v3 Start -->
+            <div>
+                <div>
+                  <div class="hover10 column">
+                    <a href="http://aptrondelhi.in/"><figure><img src="../res/images/sponsors/aptron.png" class="center-block" alt="APTRON"/></figure>
+                    </a>
+                  </div>
+              </div>
+              <!-- //.border -->
+            </div>
+            <!-- //Features Box Style v3 End -->
+          </div>
+          <br>
+          <h3 class="sponsor">Print Everything</h3>
+          <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
+          <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
+            <!-- Features Box Style v3 Start -->
+            <div>
+                <div>
+                  <div class="hover10 column">
+                    <a href="http://printeverything.in/"><figure><img src="../res/images/sponsors/printeverything.jpg" class="center-block" alt="Print Everything"/></figure>
+                    </a>
+                  </div>
+              </div>
+              <!-- //.border -->
+            </div>
+            <!-- //Features Box Style v3 End -->
+          </div>
+          <br>
+          <h3 class="sponsor">VT 4 India - Pionerring GPS</h3>
+          <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
+          <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
+            <!-- Features Box Style v3 Start -->
+            <div>
+                <div>
+                  <div class="hover10 column">
+                    <a href="http://www.vt4india.com/"><figure><img src="../res/images/sponsors/vt4india.jpg" style="width:55%" class="center-block" alt="VT 4 India - Pionerring GPS"/></figure>
+                    </a>
+                  </div>
+              </div>
+              <!-- //.border -->
+            </div>
+            <!-- //Features Box Style v3 End -->
+          </div>
+          <br>
+          <h3 class="sponsor">Travel Boots</h3>
+          <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
+          <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
+            <!-- Features Box Style v3 Start -->
+            <div>
+                <div>
+                  <div class="hover10 column">
+                    <a href="https://www.facebook.com/travelboots9818/"><figure><img src="../res/images/sponsors/travelboots.jpg" class="center-block" alt="Travel Boots"/></figure>
+                    </a>
+                  </div>
+              </div>
+              <!-- //.border -->
+            </div>
+            <!-- //Features Box Style v3 End -->
+          </div>
+          <br>
+          <h3 class="sponsor">Plasma Competitive Edge</h3>
+          <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
+          <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
+            <!-- Features Box Style v3 Start -->
+            <div>
+                <div>
+                  <div class="hover10 column">
+                    <a href="https://www.youtube.com/channel/UChBH8FHzJKIbfhOozYRMbwA"><figure><img src="../res/images/sponsors/plasma.jpg" style="width:65%" class="center-block" alt="Plasma Competitive Edge"/></figure>
+                    </a>
+                  </div>
+              </div>
+              <!-- //.border -->
+            </div>
+            <!-- //Features Box Style v3 End -->
+          </div>
+          <br>
           </div>
           <!-- //.row -->
 
